--- a/package.json
+++ b/package.json
@@ -5,7 +5,49 @@
   "repository": "https://github.com/01-binary/turbo-next-test.git",
   "author": "jinsoo <binary01@kakao.com>",
   "license": "MIT",
+  "private": true,
+  "scripts": {
+    "build": "turbo run build",
+    "dev": "turbo run dev --no-cache --parallel --continue"
+  },
+  "baseBranch": "origin/main",
+  "workspaces": [
+    "packages/*",
+    "apps/*"
+  ],
   "devDependencies": {
-    "turbo": "^1.5.6"
+    "turbo": "^1.0.23"
+  },
+  "dependencies": {
+    "typescript": "^4.5.2"
+  },
+  "turbo": {
+    "pipeline": {
+      "build": {
+        "outputs": [
+          "dist/**",
+          ".next/**",
+          "public/dist/**"
+        ],
+        "dependsOn": [
+          "^build"
+        ]
+      },
+      "test": {
+        "outputs": [
+          "coverage/**"
+        ],
+        "dependsOn": []
+      },
+      "lint": {
+        "outputs": []
+      },
+      "dev": {
+        "cache": false
+      },
+      "clean": {
+        "cache": false
+      }
+    }
   }
 }
