--- a/package.json
+++ b/package.json
@@ -16,38 +16,9 @@
     "apps/*"
   ],
   "devDependencies": {
-    "turbo": "^1.0.23"
+    "turbo": "latest"
   },
   "dependencies": {
     "typescript": "^4.5.2"
-  },
-  "turbo": {
-    "pipeline": {
-      "build": {
-        "outputs": [
-          "dist/**",
-          ".next/**",
-          "public/dist/**"
-        ],
-        "dependsOn": [
-          "^build"
-        ]
-      },
-      "test": {
-        "outputs": [
-          "coverage/**"
-        ],
-        "dependsOn": []
-      },
-      "lint": {
-        "outputs": []
-      },
-      "dev": {
-        "cache": false
-      },
-      "clean": {
-        "cache": false
-      }
-    }
   }
 }
