--- a/.github/workflows/finance.yml
+++ b/.github/workflows/finance.yml
@@ -1,4 +1,4 @@
-name: Finance Build and Deploy
+name: Finance Build
 on:
   push:
     branches:
@@ -23,14 +23,3 @@ jobs:
       - run: yarn install --frozen-lockfile
       - run: yarn build
         working-directory: apps/auto
-        env:
-          CI: true
-          DEPLOY_TARGET: gh-pages
-      - run: touch out/.nojekyll
-      - name: Deploy
-        uses: JamesIves/github-pages-deploy-action@3.7.1
-        with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BRANCH: gh-pages-finance  # 배포될 브랜치
-          FOLDER: out # 이 폴더에 있는 파일을 배포
-          CLEAN: true # 배포 브랜치에 있는 파일들을 자동으로 삭제
