--- a/.github/workflows/auto.yml
+++ b/.github/workflows/auto.yml
@@ -1,4 +1,4 @@
-name: Auto Build and Deploy
+name: Auto Build
 on:
   push:
     branches:
@@ -27,10 +27,3 @@ jobs:
           CI: true
           DEPLOY_TARGET: gh-pages
       - run: touch out/.nojekyll
-      - name: Deploy
-        uses: JamesIves/github-pages-deploy-action@3.7.1
-        with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BRANCH: gh-pages-auto  # 배포될 브랜치
-          FOLDER: out # 이 폴더에 있는 파일을 배포
-          CLEAN: true # 배포 브랜치에 있는 파일들을 자동으로 삭제
