--- a/apps/finance/package.json
+++ b/apps/finance/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@types/node": "18.8.4",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "config": "*",
