--- a/.github/workflows/finance.yml
+++ b/.github/workflows/finance.yml
@@ -22,4 +22,4 @@ jobs:
       - run: npm install -g yarn
       - run: yarn install --frozen-lockfile
       - run: yarn build
-        working-directory: apps/auto
+        working-directory: apps/finance
