--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -1,4 +1,4 @@
-name: Release Tag
+name: Check Release Tag
 on:
   push:
     branches:
@@ -6,6 +6,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    if: contains(github.event.head_commit.message, 'deploy')
     steps:
       - uses: actions/checkout@v2
       - name: 버전 정보 추출
