--- a/.github/workflows/finance.yml
+++ b/.github/workflows/finance.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - main
     tags:
-      - release-finance-**
+      - finance/v*.*.*
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
