--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -1,21 +1,22 @@
-name: Check Release Tag
+name: Check Create Tag
 on:
   push:
     branches:
       - main
 jobs:
-  build:
+  test:
+    if: contains(github.event.head_commit.message, 'deploy:finance')
     runs-on: ubuntu-latest
-    if: contains(github.event.head_commit.message, 'deploy')
     steps:
       - uses: actions/checkout@v2
       - name: 버전 정보 추출
         run: echo "##[set-output name=version;]$(echo '${{ github.event.head_commit.message }}' | egrep -o '[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}')"
+        run: echo "##[set-output name=app;]$(echo 'finance')"
         id: extract_version_name
       - name: Release 생성
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ steps.extract_version_name.outputs.version }}
+          tag_name: ${{steps.extract_version_name.outputs.app}}${{ steps.extract_version_name.outputs.version }}
           release_name: ${{ steps.extract_version_name.outputs.version }}
