--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -5,13 +5,16 @@ on:
       - main
 jobs:
   test:
-    if: contains(github.event.head_commit.message, 'deploy:finance')
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: actions-ecosystem/action-regex-match@v2
+        id: regex-match
+        with:
+          text: ${{ github.event.head_commit.message }}
+          regex: '^/label\s*(.*?)\s*$'
       - name: 버전 정보 추출
         run: echo "##[set-output name=version;]$(echo '${{ github.event.head_commit.message }}' | egrep -o '[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}')"
-        run: echo "##[set-output name=app;]$(echo 'finance')"
         id: extract_version_name
       - name: Release 생성
         uses: actions/create-release@v1
