--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -14,6 +14,7 @@ jobs:
           text: ${{ github.event.head_commit.message }}
           regex: '^/label\s*(.*?)\s*$'
       - name: 버전 정보 추출
+        if: ${{ steps.regex-match.outputs.match != '' }}
         run: echo "##[set-output name=version;]$(echo '${{ github.event.head_commit.message }}' | egrep -o '[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}')"
         id: extract_version_name
       - name: Release 생성
