--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -24,5 +24,5 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{steps.extract_version_name.outputs.app}}${{ steps.extract_version_name.outputs.version }}
+          tag_name: finance/v${{ steps.extract_version_name.outputs.version }}
           release_name: ${{ steps.extract_version_name.outputs.version }}
