--- a/.github/workflows/finance.yml
+++ b/.github/workflows/finance.yml
@@ -2,7 +2,7 @@ name: Finance Build
 on:
   push:
     tags:
-      - finance/v*.*.*
+      - finance/v[0-9]+.[0-9]+.[0-9]
 jobs:
   build-and-deploy:
     if: endsWith(github.ref, 'main')
