--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -25,3 +25,4 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: finance/v${{ steps.extract_version_name.outputs.version }}
+          release_name: finance/v${{ steps.extract_version_name.outputs.version }}
